Name:           libgraph
Version:        1.0.0
License:        BSD3
Author:         Maarten Faddegon
Build-Type:     Simple
Cabal-Version:  >= 1.10

library
  Build-Depends:     base >= 4 && < 5
  exposed-modules:   Libgraph
  default-language:  Haskell2010
  ghc-prof-options:  -auto-all
