Name:           libgraph
Version:        1.0.0
License:        BSD3
Author:         Maarten Faddegon
Build-Type:     Simple
Cabal-Version:  >= 1.10

library
  Build-Depends:     base >= 4 && < 5, monads-tf
  exposed-modules:   Data.Graph.Libgraph.DepthFirst,
                     Data.Graph.Libgraph.Dominance
  other-modules:     Data.Graph.Libgraph.Core
  default-language:  Haskell2010
  ghc-prof-options:  -auto-all

-- Executable Libgraph-test
--   Build-Depends:     base >= 4 && < 5, monads-tf, process
--   main-is:           Test.hs
--   default-language:  Haskell2010
--   ghc-prof-options:  -auto-all
