Name:           libgraph
Version:        1.0.0
License:        BSD3
Author:         Maarten Faddegon
Build-Type:     Simple
Cabal-Version:  >= 1.10

library
  Build-Depends:     base >= 4 && < 5, monads-tf, union-find, 
                     containers, array
  exposed-modules:   Data.Graph.Libgraph  
  other-modules:     Data.Graph.Libgraph.DepthFirst,
                     Data.Graph.Libgraph.Dominance,
                     Data.Graph.Libgraph.Cycles,
                     Data.Graph.Libgraph.Core,
                     Data.Graph.Libgraph.Dot
                     Data.Graph.Libgraph.UnionFind
                     Data.Graph.Libgraph.Dagify
  default-language:  Haskell2010
  ghc-prof-options:  -auto-all

-- Executable Libgraph-test
--   Build-Depends:     base >= 4 && < 5, monads-tf, process
--   main-is:           Test.hs
--   default-language:  Haskell2010
--   ghc-prof-options:  -auto-all
